--- a/src/components/Testimonial/styles.scss
+++ b/src/components/Testimonial/styles.scss
@@ -67,7 +67,7 @@
       background-color: var(--light-green);
     }
 
-    &.active {
+    &.active-tab {
       background-color: var(--light-green);
     }
   }
